--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -20,7 +20,7 @@
 	min-height: $full-viewport-height;
 
 	.main-section {
-		width: 70%;
+		width: calc(100% - 480px);
 	}
 
 	.weather-section {
@@ -83,9 +83,34 @@
 		}
 	}
 
+	.forecast-chart-section {
+		border-radius: 10px;
+		background-color: #0000009c;
+		backdrop-filter: blur(5px);
+		@include padding(20px);
+		@include marginTop(20px);
+
+		.title {
+			font-size: 30px;
+			color: #bb8d3a;
+		}
+
+		.chart_wrapper {
+			canvas {
+				width: 100% !important;
+				height: 100% !important;
+			}
+
+			.line-chart {
+				display: flex;
+				width: 100%;
+				height: 500px;
+			}
+		}
+	}
+
 	.forecast-section {
-		width: 30%;
-		min-width: 400px;
+		min-width: 450px;
 		border-radius: 10px;
 		background-color: #0000009c;
 		backdrop-filter: blur(5px);
